--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,52 @@ body {
 	height:  auto;
 	background: #364F6B;
 }
+
+h1 {
+	margin: 0;
+	padding: 0;
+	font-family: Calibri;
+	color: #fff;
+	text-align: center;
+}
+
+h2 {
+	font-family:  Calibri;
+	font-size: 2em;
+	margin: 0;
+}
+
+.recipe-cards {
+	border-bottom:  1px solid #364F6B;
+	float:  left;
+	margin: 5em 0 0 5em;
+	width: 90%;
+}
+
+.cards {
+	float:  left;
+	width:  10%;
+	margin: 3em 0 0 5em;
+	border:  1px solid grey;
+}
+
+.cards h4 {
+	text-align: center;
+	border-bottom:  1px solid grey;
+	margin: 0;
+	padding: 7px;
+	background:  #9FB1BCFF;
+	font-family: Calibri;
+	color: #fff;
+}
+
+.cards img { 
+	width:  12em;
+	height: 10em;
+}
+
+.cards p {
+	font-family: Calibri;
+	margin: 0;
+	padding: 1em;
+}
