--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h2 {
 }
 
 .recipe-cards {
-	border-bottom:  1px solid #364F6B;
+	border-bottom:  4px solid #364F6B;
 	float:  left;
 	margin: 5em 0 0 5em;
 	width: 90%;
@@ -37,14 +37,19 @@ h2 {
 	border:  1px solid grey;
 }
 
+.cards a {
+	text-decoration: none;
+	color: #f0ffff;
+}
+
 .cards h4 {
 	text-align: center;
 	border-bottom:  1px solid grey;
 	margin: 0;
 	padding: 7px;
-	background:  #9FB1BCFF;
+	background: #9FB1BCFF;
 	font-family: Calibri;
-	color: #fff;
+	text-decoration: none;
 }
 
 .cards img { 
@@ -56,4 +61,11 @@ h2 {
 	font-family: Calibri;
 	margin: 0;
 	padding: 1em;
+}
+
+.recipe-layout img {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	margin-top: 10em;
 }
