--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,13 @@ body {
 	background: #364F6B;
 }
 
+h1, h2, h3, h4 {
+	font-family: Calibri;
+}
+
 h1 {
 	margin: 0;
 	padding: 0;
-	font-family: Calibri;
 	color: #fff;
 	text-align: center;
 }
@@ -48,7 +51,6 @@ h2 {
 	margin: 0;
 	padding: 7px;
 	background: #9FB1BCFF;
-	font-family: Calibri;
 	text-decoration: none;
 }
 
@@ -68,4 +70,17 @@ h2 {
 	margin-right: auto;
 	display: block;
 	margin-top: 10em;
+}
+
+.desc {
+	margin: 0 auto;
+	width:  50%;
+	border: 1px solid black;
+	text-align: center;
+	padding: 1em;
+}
+
+ul,ol li {
+	font-family: Calibri;
+	align-text: left;
 }
